--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-      <title>Skel Test</title>
+      <title>Project Ascension</title>
       <!-- Styles -->
       <link rel="stylesheet" href="css/styles.css">
 
